--- a/main.html
+++ b/main.html
@@ -7,6 +7,15 @@
 </head>
 
 <body>
+	<img>
+	<h1></h1>
+	<a>l</a>
+	<section id="skills">s</section>
+	<section id = "projects">
+		<ul>
+			<li>p</li>
+		</ul>
+	</section>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
