--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<img>
-	<h1></h1>
-	<a>l</a>
+	<h1>a</h1>
+	<a href="#">l</a>
 	<section id="skills">s</section>
 	<section id = "projects">
 		<ul>
