--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<img>
 	<h1>a</h1>
-	<a href="#">l</a>
+	<a href="linkedin.com">l</a>
 	<section id="skills">s</section>
 	<section id = "projects">
 		<ul>
